# signal-ai

./: .gitignore  Dockerfile  README.md  SETUP.md
.github/workflows/: ci.yml
backend/: Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
backend/migrations/: 0001_create_tables.sql
backend/src/: db.rs  error.rs  lib.rs  llm.rs  main.rs  models.rs  signal.rs  worker.rs
backend/tests/: chat_test.rs  signal_test.rs  worker_test.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/routes/: +page.svelte
senator_budd_research/: 01_biographical_overview.md  02_committee_assignments_legislative_record.md  03_political_positions_key_issues.md  04_contact_office_information.md  05_comprehensive_source_links.md  README.md
