[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
dotenvy = "0.15"
# Placeholder crate for Anthropic, replace with official when available
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock" ] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
# For HTTP mocking
wiremock = "0.6"
tower = "0.4"
hyper = "1.0" 